charts/camunda-platform/test/web-modeler/golden/deployment-webapp.golden.yaml
---
# Source: camunda-platform/templates/web-modeler/deployment-webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camunda-platform-test-web-modeler-webapp
  labels:
    app: camunda-platform
    app.kubernetes.io/name: web-modeler
    app.kubernetes.io/instance: camunda-platform-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/version: "0.7.0-beta"
    app.kubernetes.io/component: webapp
  annotations:
    {}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: camunda-platform
      app.kubernetes.io/name: web-modeler
      app.kubernetes.io/instance: camunda-platform-test
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: camunda-platform
      app.kubernetes.io/component: webapp
  template:
    metadata:
      labels:
        app: camunda-platform
        app.kubernetes.io/name: web-modeler
        app.kubernetes.io/instance: camunda-platform-test
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: camunda-platform
        app.kubernetes.io/version: "0.7.0-beta"
        app.kubernetes.io/component: webapp
    spec:
      imagePullSecrets:
        []
      containers:
      - name: web-modeler-webapp
        image: "registry.camunda.cloud/web-modeler-ee/modeler-webapp:0.7.0-beta"
        imagePullPolicy: IfNotPresent
        env:
          - name: NODE_ENV
            value: "production"
          - name: NODE_OPTIONS
            value: "--max-old-space-size=128"
          - name: HTTP_WORKERS
            value: "2"
          - name: RESTAPI_HOST
            value: "camunda-platform-test-web-modeler-restapi"
          - name: RESTAPI_PORT
            value: "80"
          - name: RESTAPI_MANAGEMENT_PORT
            value: "8091"
          - name: SERVER_URL
            value: "http://localhost:8084"
          - name: SERVER_HTTPS_ONLY
            value: "false"
          - name: OAUTH2_CLIENT_ID
            value: "web-modeler"
          - name: OAUTH2_TOKEN_AUDIENCE
            value: "web-modeler"
          - name: OAUTH2_TOKEN_ISSUER
            value: "http://localhost:18080/auth/realms/camunda-platform"
          - name: KEYCLOAK_BASE_URL
            value: "http://localhost:18080"
          - name: KEYCLOAK_CONTEXT_PATH
            value: "/auth"
          - name: KEYCLOAK_REALM
            value: "camunda-platform"
          - name: KEYCLOAK_JWKS_URL
            value: "http://camunda-platform-tes:80/auth/realms/camunda-platform/protocol/openid-connect/certs"
          - name: PUSHER_HOST
            value: "camunda-platform-test-web-modeler-websockets"
          - name: PUSHER_PORT
            value: "80"
          - name: PUSHER_APP_ID
            valueFrom:
              configMapKeyRef:
                name: camunda-platform-test-web-modeler
                key: pusher-app-id
          - name: PUSHER_KEY
            valueFrom:
              configMapKeyRef:
                name: camunda-platform-test-web-modeler
                key: pusher-app-key
          - name: PUSHER_SECRET
            valueFrom:
              secretKeyRef:
                name: camunda-platform-test-web-modeler
                key: pusher-app-secret
          - name: CLIENT_PUSHER_HOST
            value: "localhost"
          - name: CLIENT_PUSHER_PORT
            value: "8085"
          - name: CLIENT_PUSHER_FORCE_TLS
            value: "false"
          - name: CLIENT_PUSHER_KEY
            valueFrom:
              configMapKeyRef:
                name: camunda-platform-test-web-modeler
                key: pusher-app-key
          - name: IDENTITY_BASE_URL
            value: "http://camunda-platform-test-identity:80"
        resources:
          limits:
            cpu: 800m
            memory: 512Mi
          requests:
            cpu: 400m
            memory: 256Mi
        ports:
        - containerPort: 8070
          name: http
          protocol: TCP
        - containerPort: 8071
          name: http-management
          protocol: TCP
