charts/camunda-platform/test/web-modeler/golden/service-webapp.golden.yaml
---
# Source: camunda-platform/charts/web-modeler/templates/service-webapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: camunda-platform-test-web-modeler-webapp
  labels:
    app: camunda-platform
    app.kubernetes.io/name: web-modeler
    app.kubernetes.io/instance: camunda-platform-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/version: "0.7.0-beta"
    app.kubernetes.io/component: webapp
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
    targetPort: 8070
    protocol: TCP
  selector:
    app: camunda-platform
    app.kubernetes.io/name: web-modeler
    app.kubernetes.io/instance: camunda-platform-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/component: webapp
