charts/camunda-platform/test/web-modeler/golden/service-websockets.golden.yaml
---
# Source: camunda-platform/templates/web-modeler/service-websockets.yaml
apiVersion: v1
kind: Service
metadata:
  name: camunda-platform-test-web-modeler-websockets
  labels:
    app: camunda-platform
    app.kubernetes.io/name: web-modeler
    app.kubernetes.io/instance: camunda-platform-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/version: "0.8.0-beta"
    app.kubernetes.io/component: websockets
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
    targetPort: 8060
    protocol: TCP
  selector:
    app: camunda-platform
    app.kubernetes.io/name: web-modeler
    app.kubernetes.io/instance: camunda-platform-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/component: websockets
